--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,14 @@ button.button {
   border: 1px solid black;
 }
 
+p#inputDisplay {
+  font-size: small;
+}
+
+p#resultDisplay {
+  font-size: large;
+}
+
 #number1 {  
   grid-column: 1;
   grid-row: 5;
