--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,42 @@
+body {
+  background-image: url("./images/Cirucus-tent-background.webp");
+  background-repeat: no-repeat;
+  background-color: #cccccc;
+  background-position: center;
+  background-size: cover;
+ }
+
 #calc-container {
   display: grid;
   grid-template-columns: repeat(4,1fr);
   grid-template-rows: repeat(6,1fr);
-  height: 400px;
-  width: 300px;
+  height: 270px;
+  width: 200px;
+  margin: auto;
   position: relative;
-  border: 2px solid rgb(150, 68, 68);
+  margin-top: 30%;
+  border: 2px solid black;
+  background-color: black;
 }
 
 button.button {
   text-align: center;
   margin: 1px;
   border: 1px solid black;
+  background-image: radial-gradient( rgb(238, 29, 29), black);
+}
+
+#display {
+  grid-column: 1 / span 4;
+  margin: 2px;
+  border: 2px solid black;  
+  text-align: right;
+  background-color: blanchedalmond;
 }
 
 p#inputDisplay {
-  font-size: small;
-}
-
-p#resultDisplay {
-  font-size: large;
+  margin: 2px;
+  font-size: 28px;
 }
 
 #number1 {  
@@ -89,11 +106,4 @@ p#resultDisplay {
 #operate {
   grid-column: 4 / 5;
   grid-row: 5 / 7;
-}
-
-#display {
-  grid-column: 1 / span 4;
-  margin: 2px;
-  border: 2px solid black;  
-  text-align: right;
 }
